<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#878585" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="11dp"
                android:textSize="24sp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="136dp"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/albumArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="38dp"
        android:text="@string/artist"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumTitle" />

    <TextView
        android:id="@+id/albumViewTitle"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="136dp"
        android:text="@string/albumtitle"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/albumTitle"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/albumViewArtist"
        android:layout_width="186dp"
        android:layout_height="51dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:text="@string/albumartist"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/albumArtist"
        app:layout_constraintTop_toBottomOf="@+id/albumViewTitle" />

    <TextView
        android:id="@+id/albumViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="29dp"
        android:text="@string/albumViewYear"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/albumViewFormat"
        app:layout_constraintStart_toEndOf="@+id/albumYear1" />

    <TextView
        android:id="@+id/albumFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="29dp"
        android:text="@string/format"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/albumRuntime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/albumYear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="28dp"
        android:text="@string/albumYear1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/albumFormat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/albumViewRuntime"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="77dp"
        android:text="@string/albumruntime"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteAlbumButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/albumViewFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="28dp"
        android:text="@string/albumformat"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/albumViewRuntime"
        app:layout_constraintStart_toEndOf="@+id/albumFormat" />

    <TextView
        android:id="@+id/albumRuntime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="260dp"
        android:text="@string/runtime"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteAlbumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="131dp"
        android:background="#EF2626"
        android:text="@string/delete"
        android:textColor="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>